--- a/Notebooks/round 3 car scrapes.ipynb
+++ b/Notebooks/round 3 car scrapes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "c16dc4dc",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,7 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 103.0.5060\n",
       "[WDM] - Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "[WDM] - About to download new driver from https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\Rob\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53]\n"
+      "[WDM] - Driver [C:\\Users\\Rob\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "id": "aa2aaaa5",
    "metadata": {},
    "outputs": [
@@ -69,7 +68,7 @@
        "Name: urls, Length: 2221, dtype: object"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "id": "69f00810",
    "metadata": {},
    "outputs": [],
@@ -97,15 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b253199",
+   "execution_count": 6,
+   "id": "56c24ec3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.visit(url_list[0])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "id": "5196f753",
    "metadata": {},
    "outputs": [],
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "id": "2c4d8564",
    "metadata": {},
    "outputs": [
@@ -123,20 +124,167 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adding 0 of 4\n",
-      "Adding 1 of 4\n",
-      "Adding 2 of 4\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21244/3430480697.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# start with just 1 loop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mbrowser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvisit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "Adding 1 of 200\n",
+      "Adding 2 of 200\n",
+      "Adding 3 of 200\n",
+      "Adding 4 of 200\n",
+      "Adding 5 of 200\n",
+      "Adding 6 of 200\n",
+      "Adding 7 of 200\n",
+      "Adding 9 of 200\n",
+      "Adding 10 of 200\n",
+      "Adding 12 of 200\n",
+      "Adding 13 of 200\n",
+      "Adding 14 of 200\n",
+      "Adding 15 of 200\n",
+      "Adding 16 of 200\n",
+      "Adding 17 of 200\n",
+      "Adding 18 of 200\n",
+      "Adding 19 of 200\n",
+      "Adding 21 of 200\n",
+      "Adding 22 of 200\n",
+      "Adding 25 of 200\n",
+      "Adding 26 of 200\n",
+      "Adding 27 of 200\n",
+      "Adding 28 of 200\n",
+      "Adding 29 of 200\n",
+      "Adding 30 of 200\n",
+      "Adding 31 of 200\n",
+      "Adding 32 of 200\n",
+      "Adding 33 of 200\n",
+      "Adding 35 of 200\n",
+      "Adding 36 of 200\n",
+      "Adding 37 of 200\n",
+      "Adding 38 of 200\n",
+      "Adding 39 of 200\n",
+      "Adding 40 of 200\n",
+      "Adding 41 of 200\n",
+      "Adding 42 of 200\n",
+      "Adding 43 of 200\n",
+      "Adding 45 of 200\n",
+      "Adding 46 of 200\n",
+      "Adding 48 of 200\n",
+      "Adding 49 of 200\n",
+      "Adding 50 of 200\n",
+      "Adding 51 of 200\n",
+      "Adding 52 of 200\n",
+      "Adding 53 of 200\n",
+      "Adding 54 of 200\n",
+      "Adding 56 of 200\n",
+      "Adding 58 of 200\n",
+      "Adding 59 of 200\n",
+      "Adding 60 of 200\n",
+      "Adding 61 of 200\n",
+      "Adding 62 of 200\n",
+      "Adding 64 of 200\n",
+      "Adding 65 of 200\n",
+      "Adding 66 of 200\n",
+      "Adding 67 of 200\n",
+      "Adding 69 of 200\n",
+      "Adding 70 of 200\n",
+      "Adding 71 of 200\n",
+      "Adding 72 of 200\n",
+      "Adding 73 of 200\n",
+      "Adding 75 of 200\n",
+      "Adding 76 of 200\n",
+      "Adding 77 of 200\n",
+      "Adding 80 of 200\n",
+      "Adding 81 of 200\n",
+      "Adding 82 of 200\n",
+      "Adding 83 of 200\n",
+      "Adding 84 of 200\n",
+      "Adding 85 of 200\n",
+      "Adding 87 of 200\n",
+      "Adding 88 of 200\n",
+      "Adding 89 of 200\n",
+      "Adding 90 of 200\n",
+      "Adding 91 of 200\n",
+      "Adding 92 of 200\n",
+      "Adding 93 of 200\n",
+      "Adding 96 of 200\n",
+      "Adding 97 of 200\n",
+      "Adding 98 of 200\n",
+      "Adding 99 of 200\n",
+      "Adding 100 of 200\n",
+      "Adding 101 of 200\n",
+      "Adding 105 of 200\n",
+      "Adding 106 of 200\n",
+      "Adding 107 of 200\n",
+      "Adding 108 of 200\n",
+      "Adding 111 of 200\n",
+      "Adding 112 of 200\n",
+      "Adding 113 of 200\n",
+      "Adding 114 of 200\n",
+      "Adding 116 of 200\n",
+      "Adding 118 of 200\n",
+      "Adding 119 of 200\n",
+      "Adding 120 of 200\n",
+      "Adding 121 of 200\n",
+      "Adding 122 of 200\n",
+      "Adding 124 of 200\n",
+      "Adding 125 of 200\n",
+      "Adding 126 of 200\n",
+      "Adding 128 of 200\n",
+      "Adding 129 of 200\n",
+      "Adding 133 of 200\n",
+      "Adding 135 of 200\n",
+      "Adding 136 of 200\n",
+      "Adding 137 of 200\n",
+      "Adding 138 of 200\n",
+      "Adding 139 of 200\n",
+      "Adding 140 of 200\n",
+      "Adding 141 of 200\n",
+      "Adding 142 of 200\n",
+      "Adding 143 of 200\n",
+      "Adding 144 of 200\n",
+      "Adding 145 of 200\n",
+      "Adding 147 of 200\n",
+      "Adding 148 of 200\n",
+      "Adding 150 of 200\n",
+      "Adding 152 of 200\n",
+      "Adding 153 of 200\n",
+      "Adding 155 of 200\n",
+      "Adding 156 of 200\n",
+      "Adding 157 of 200\n",
+      "Adding 158 of 200\n",
+      "Adding 159 of 200\n",
+      "Adding 160 of 200\n",
+      "Adding 162 of 200\n",
+      "Adding 163 of 200\n",
+      "Adding 164 of 200\n",
+      "Adding 165 of 200\n",
+      "Adding 166 of 200\n",
+      "Adding 167 of 200\n",
+      "Adding 168 of 200\n",
+      "Adding 169 of 200\n",
+      "Adding 170 of 200\n",
+      "Adding 171 of 200\n",
+      "Adding 172 of 200\n",
+      "Adding 173 of 200\n",
+      "Adding 174 of 200\n",
+      "Adding 175 of 200\n",
+      "Adding 176 of 200\n",
+      "Adding 177 of 200\n",
+      "Adding 178 of 200\n",
+      "Adding 179 of 200\n",
+      "Adding 181 of 200\n",
+      "Adding 182 of 200\n",
+      "Adding 183 of 200\n",
+      "Adding 184 of 200\n",
+      "Adding 185 of 200\n",
+      "Adding 186 of 200\n",
+      "Adding 187 of 200\n",
+      "Adding 188 of 200\n",
+      "Adding 189 of 200\n",
+      "Adding 190 of 200\n",
+      "Adding 191 of 200\n",
+      "Adding 192 of 200\n",
+      "Adding 193 of 200\n",
+      "Adding 194 of 200\n",
+      "Adding 195 of 200\n",
+      "Adding 196 of 200\n",
+      "Adding 197 of 200\n",
+      "Adding 198 of 200\n"
      ]
     }
    ],
@@ -206,117 +354,6 @@
     "    except:\n",
     "        failed_tries.append(i)\n",
     "cars_df.to_csv(f'../Resources/{start}-{end}.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "1380639b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2550 W University Dr\\nProsper, TX 75078'"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dealeraddress = browser.find_by_tag('span')\n",
-    "for d in dealeraddress:\n",
-    "    if d['data-track-ui'] == 'dealer-address':\n",
-    "        dealeradd = d.text\n",
-    "dealeradd        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "eb323b1e",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Make:</th>\n",
-       "      <th>Model:</th>\n",
-       "      <th>Year:</th>\n",
-       "      <th>Trim:</th>\n",
-       "      <th>Body type:</th>\n",
-       "      <th>Exterior color:</th>\n",
-       "      <th>Interior color:</th>\n",
-       "      <th>VIN:</th>\n",
-       "      <th>Stock number:</th>\n",
-       "      <th>Price:</th>\n",
-       "      <th>Dealer Name:</th>\n",
-       "      <th>Dealer Address:</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jeep</td>\n",
-       "      <td>Wrangler</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>Sport 4WD</td>\n",
-       "      <td>SUV / crossover</td>\n",
-       "      <td>Bright White Clearcoat</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>1C4GJXAN9NW272694</td>\n",
-       "      <td>NW272694</td>\n",
-       "      <td>$33,485</td>\n",
-       "      <td>Shottenkirk Prosper Chrysler Dodge Jeep Ram</td>\n",
-       "      <td>2550 W University Dr&lt;br&gt;Prosper, TX 75078</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Make:    Model: Year:      Trim:       Body type:         Exterior color:  \\\n",
-       "0  Jeep  Wrangler  2022  Sport 4WD  SUV / crossover  Bright White Clearcoat   \n",
-       "\n",
-       "  Interior color:               VIN: Stock number:   Price:  \\\n",
-       "0           Black  1C4GJXAN9NW272694      NW272694  $33,485   \n",
-       "\n",
-       "                                  Dealer Name:  \\\n",
-       "0  Shottenkirk Prosper Chrysler Dodge Jeep Ram   \n",
-       "\n",
-       "                             Dealer Address:  \n",
-       "0  2550 W University Dr<br>Prosper, TX 75078  "
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_df"
    ]
   },
   {
@@ -487,23 +524,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "id": "4c7222d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "39"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "failed_tries"
+    "len(failed_tries)"
    ]
   },
   {
